--- a/src/main/resources/com/wlf/app/frame.fxml
+++ b/src/main/resources/com/wlf/app/frame.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import atlantafx.base.controls.TabLine?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -11,53 +10,39 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import org.controlsfx.control.MaskerPane?>
 
 <StackPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.FrameController">
-   <children>
-      <BorderPane>
-         <top>
+    <BorderPane>
+        <top>
             <MenuBar BorderPane.alignment="CENTER">
-              <menus>
                 <Menu mnemonicParsing="false" text="File">
-                  <items>
                     <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
-                  <items>
                     <MenuItem mnemonicParsing="false" onAction="#showPreferences" text="Preferences" />
-                  </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
-                  <items>
                     <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
                 </Menu>
-              </menus>
             </MenuBar>
-         </top>
-         <center>
+        </top>
+        <center>
             <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <BorderPane fx:id="content" prefHeight="200.0" prefWidth="200.0" />
-                  <BorderPane fx:id="preferences" prefHeight="200.0" prefWidth="200.0" visible="false" />
-               </children>
+                <BorderPane fx:id="content" prefHeight="200.0" prefWidth="200.0" />
+                <BorderPane fx:id="preferences" prefHeight="200.0" prefWidth="200.0" visible="false" />
             </StackPane>
-         </center></BorderPane>
-      <VBox fx:id="splash" alignment="CENTER" style="-fx-background-color: rgba(0%,0%,0%,0.75);" visible="false">
-         <children>
-             <Label text="Loading..." textAlignment="CENTER" textFill="WHITE">
-               <padding>
-                  <Insets bottom="8.0" />
-               </padding></Label>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@programicon.png" />
-               </image></ImageView>
-         </children>
-      </VBox>
-      <FontIcon />
-      <TabLine />
-   </children>
+        </center>
+    </BorderPane>
+    <VBox fx:id="splash" alignment="CENTER" style="-fx-background-color: rgba(0%,0%,0%,0.75);">
+        <Label text="Loading..." textAlignment="CENTER" textFill="WHITE">
+            <padding>
+                <Insets bottom="8.0" />
+            </padding>
+        </Label>
+        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@programicon.png" />
+        </ImageView>
+    </VBox>
+   <MaskerPane fx:id="loadingMask" text="Loading..." visible="false" />
 </StackPane>
