--- a/src/main/resources/com/wlf/app/mainView.fxml
+++ b/src/main/resources/com/wlf/app/mainView.fxml
@@ -1,17 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import org.controlsfx.control.MaskerPane?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wlf.app.ViewController">
-    <top>
-    </top>
-    <center>
-        <TabPane side="LEFT">
-            <Tab text="Tab 1">
 
-            </Tab>
-        </TabPane>
-    </center>
-</BorderPane>
+<StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.wlf.app.MainController">
+    <BorderPane fx:id="content" prefHeight="400.0" prefWidth="600.0">
+        <top>
+            <MenuBar BorderPane.alignment="CENTER">
+                <Menu mnemonicParsing="false" text="%menuBar.file">
+                    <MenuItem mnemonicParsing="false" text="%menu.close"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="%menuBar.edit">
+                    <MenuItem mnemonicParsing="false" onAction="#showPreferences" text="%menu.preferences"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="%menuBar.help">
+                    <MenuItem mnemonicParsing="false" text="%menu.about"/>
+                </Menu>
+            </MenuBar>
+        </top>
+        <center>
+            <TabPane side="LEFT" tabMaxHeight="32.0" tabMaxWidth="40.0" tabMinHeight="40.0" tabMinWidth="32.0">
+                <Tab closable="false">
+                    <graphic>
+                        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@programicon.png"/>
+                        </ImageView>
+                    </graphic>
+                </Tab>
+            </TabPane>
+        </center>
+    </BorderPane>
+    <MaskerPane text="%loading" visible="false"/>
+</StackPane>
